[gd_scene load_steps=4 format=3 uid="uid://uo5jmwg10vix"]

[ext_resource type="Script" path="res://UI/Header_Bar.gd" id="1_utm2y"]
[ext_resource type="Texture2D" uid="uid://ds0yig1xjd78" path="res://Resources/UI/Reset.png" id="2_6xdi1"]
[ext_resource type="Texture2D" uid="uid://bhjqal27r7xu5" path="res://Resources/UI/Menu.png" id="3_yxi3s"]

[node name="HBoxContainer" type="HBoxContainer"]
offset_right = 200.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_utm2y")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
layout_mode = 2
alignment_horizontal = 0

[node name="ResetButton" type="TextureButton" parent="MarginContainer/AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_6xdi1")
stretch_mode = 4

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer4"]
layout_mode = 2

[node name="InfoButton" type="TextureButton" parent="MarginContainer4/AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_6xdi1")
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Label" type="Label" parent="MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer3"]
layout_mode = 2
alignment_horizontal = 2

[node name="MenuButton" type="TextureButton" parent="MarginContainer3/AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_yxi3s")
stretch_mode = 4
